--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ kiteconnect==5.0.1
 python-dotenv==1.0.0
 APScheduler==3.10.4
 gunicorn==21.2.0
+pytz==2023.3
+requests==2.31.0
+pandas==2.1.1
+numpy==1.25.2
