--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ pytz==2023.3
 requests==2.31.0
 pandas==2.1.1
 numpy==1.25.2
+plotly==5.17.0  # Interactive charting library
+# Technical Analysis Dependencies
+ta-lib==0.4.28  # Technical Analysis Library (optional, for advanced indicators)
+scikit-learn==1.3.0  # Machine Learning (for future enhancements)
