--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ numpy==1.25.2
 plotly==5.17.0  # Interactive charting library
 yfinance==0.2.32  # Yahoo Finance data fetcher
 # Technical Analysis Dependencies
-ta-lib==0.4.28  # Technical Analysis Library (optional, for advanced indicators)
 scikit-learn==1.3.0  # Machine Learning (for future enhancements)
+# Note: TA-Lib removed - using pure pandas for MACD (better for production)
